--- a/weather.css
+++ b/weather.css
@@ -1,5 +1,12 @@
 body{
-    background-image: linear-gradient(122deg,#5aaefd,rgb(250, 239, 143))   
+    background-image: linear-gradient(122deg,#5aaefd,rgb(250, 239, 143)) ;
+    background-repeat: no-repeat;  
+}
+
+.list-group{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
 }
 
 
