--- a/weather.css
+++ b/weather.css
@@ -6,6 +6,38 @@ body{
 .allofit{
     height:100vh;
 }
+
+.top-section{
+    display: flex;
+    flex-direction: row;
+}
+.ajax-section{
+    background-color:rgb(250, 239, 143);   
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.main-card{
+    display:flex;
+    padding: 1rem;
+}
+
+.card-heading{   
+    background-color: #5aaefd;
+    padding: 1rem;
+    border-radius: 5px;
+}
+.card-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    margin: 1rem;
+    background-color: rgb(210, 132, 132);
+    border-radius: 5px;
+}
 .list-group{
     display: flex;
     flex-direction: column;
@@ -19,10 +51,7 @@ h1{
 
 }
 
-.main-card{
-    display:flex;
 
-}
 
 
 
