--- a/weather.css
+++ b/weather.css
@@ -44,11 +44,43 @@ body{
     width: 10rem;
 }
 
+.list-group-item{
+   
+    background-color: #92aac1;
+}
+
 
 
 h1{
     text-align: center;
 
+}
+#hometown{
+    text-align: center;
+    margin: 2rem;
+}
+
+.uv-index-color{
+    border-radius: 5px;
+    padding: 1px;
+}
+
+.five-day-cards{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.five-day-card{
+    background-color: blueviolet;
+    border-radius: 5px;
+    padding: 1rem;
+    margin-top: 3rem;
+    color:rgb(250, 239, 143);
+}
+
+.five-day-info{
+    display: flex;
+    flex-direction: row;
 }
 
 
