--- a/weather.css
+++ b/weather.css
@@ -11,6 +11,9 @@ header{
     font-size: 3em;
     margin-bottom: 1rem;
 }
+.button-dad{
+    width:80px;
+}
 
 .allofit{
     height: fit-content;
@@ -65,6 +68,12 @@ header{
 }
 .list-group-item:hover{   
     cursor: pointer;
+    background-image: linear-gradient(122deg,rgb(66, 41, 123),#d7b37a) ;
+    box-shadow: 0px 0px 10px rgb(225, 128, 128);
+    color:#6d98bf;
+    font-size: larger;
+    padding: 20px;
+    border-radius: 5px;
 }
 
 
